--- a/.github/workflows/build-gl-b3000.yml
+++ b/.github/workflows/build-gl-b3000.yml
@@ -47,6 +47,15 @@ jobs:
           gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev \
           python3-setuptools python3-venv python3-dev rsync unzip zlib1g-dev file wget
 
+      - name: Disable Telephony Feed if it exists
+        run: |
+          echo "Attempting to disable telephony feed in feeds.conf.default..."
+          # Use sed to comment out the line starting with 'src-git telephony'
+          # -i modifies the file in place. Ignore error if the line isn't found.
+          sed -i '/^src-git telephony/s/^/#/' feeds.conf.default || true
+          echo "Current feeds.conf.default content:"
+          cat feeds.conf.default
+
       # Run feeds update/install *after* the merge
       - name: Update and install feeds
         run: |
